Squashed commit of the following:
commit 6bb1d81d31859d10dee8157179a9c5e34ca50d15
Author: Ankit Bansal <anku171@gmail.com>
Date:   Mon Nov 21 17:11:22 2016 +0530

    login module

commit 0528d1d9f5036d4ef606a5916d6ed90762fcf563
Author: Mohit <mohitsingla2256@gmail.com>
Date:   Mon Nov 21 16:03:22 2016 +0530

    UI changes

commit 6ff8b17e0f7b93f1de5d4b55935aee21c95c502b
Author: Ankit Bansal <anku171@gmail.com>
Date:   Mon Nov 21 14:28:41 2016 +0530

    checking in login module

commit d03bebd09de5fdde6f324505e6f2087d814ec50a
Author: Ankit Bansal <anku171@gmail.com>
Date:   Mon Nov 21 14:17:42 2016 +0530

    login functionality

commit 764eeb9e0cf8fb75412a64275c146104dde83629
Author: Ankit Bansal <anku171@gmail.com>
Date:   Mon Nov 21 12:39:58 2016 +0530

    login module

commit e2d1df072a3f603e724853906ad5819bb1c61f6e
Author: Ankit Bansal <anku171@gmail.com>
Date:   Sun Nov 20 18:50:23 2016 +0530

    wizard check in

commit 3bc94395b4e56911a212dfe080f24cf563e0ebb0
Author: Ankit Bansal <anku171@gmail.com>
Date:   Sun Nov 20 18:33:02 2016 +0530

    wizard check in

commit e6d41d1842bddc8c4a751ae3b129ad9a9929c9c5
Author: Ankit Bansal <anku171@gmail.com>
Date:   Sun Nov 20 13:31:33 2016 +0530

    changes in wizard

commit 4b447e94cea38ee487136aa6216e48b1465e5ab0
Author: Ankit Bansal <anku171@gmail.com>
Date:   Sat Nov 19 11:27:01 2016 +0530

    activate account implemented

commit 824778afb7074e9dbba139740680c2cb5eb56b71
Author: Ankit Bansal <anku171@gmail.com>
Date:   Sat Nov 19 10:04:01 2016 +0530

    category and city is kept in session storage

commit 74625b7b3725e45bb1eac0f944808aaf1ce6db8e
Author: Ankit Bansal <anku171@gmail.com>
Date:   Sat Nov 19 09:06:25 2016 +0530

    ui validations in forms

commit fdcbc35c33e44f1f42baf113894658538613df35
Author: Ankit Bansal <anku171@gmail.com>
Date:   Sat Nov 19 08:59:41 2016 +0530

    ui validations on forms

commit 5bec8927a40575fc9e6f4997e4033f6b4b1d3b65
Author: Ankit Bansal <anku171@gmail.com>
Date:   Fri No

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -429,6 +429,11 @@ p.info {
 	background-color: transparent;	
 }
 
+/* navbar-color for wizard only */
+.wizard .navbar-inverse{
+	background-color: #ee3e20;		
+}
+
 .navbar-inverse .navbar-toggle{
 	border-color: #ffffff;
 }
@@ -1151,6 +1156,63 @@ md-input-container #captcha input{
 .formatter-class{
 	    position: absolute;
     top: 60px !important;
+}
+
+/* global message bar classes */
+.err-msg-content{
+	color: #b20000;
+	line-height: 24px;
+}
+
+.success-msg-content{
+	color: #2a7d05;
+	line-height: 24px;
+}
+
+.warning-msg-content{
+	color: #00529B;
+	line-height: 24px;
+}
+
+.validation-err-msg{
+	color: rgb(221,44,0);
+	font-size: 12px;
+	padding-top: 5px;
+	padding-right: 5px;
+	line-height: 14px;
+}
+
+.bg-white{
+	background: rgb(255, 255, 255);
+}
+
+.mBottom8{
+	margin-bottom: 8px;
+}
+
+/* global progress bar */
+
+.globalProgressbar{
+	background: rgba(255, 255, 255, 0.8);
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	z-index: 10000;
+	top: 0;
+	left: 0;
+}
+
+.globalProgressSpinner{
+	position: absolute;
+    top: 40%;
+    left: 50%;
+    margin-top: -25px;
+    margin-left: -25px;
+}
+
+.loggedInInfoBtn{
+	color: #ffffff;
+	text-transform: capitalize;
 }
 
 @media only screen and (max-width: 767px) and (min-width: 0)
