--- a/app/lp_wizard/views/venue_wizard/venue_wizard.html
+++ b/app/lp_wizard/views/venue_wizard/venue_wizard.html
@@ -1,10 +1,14 @@
-<md-content style="padding-top: 80px;">
+<md-content style="padding-top: 80px;" ng-controller="venueWizardController as vm">
 <wizard on-finish="finishedWizard()" indicators-position="top"> 
     <wz-step wz-title="Basic Details">
     <md-content>
 		<div layout="row" layout-wrap layout-margin>
         <h2 class="md-title">Basic Details</h2>
+         <div flex></div>	
+        <md-button class="md-raised" disabled>Back</md-button>
+        <md-button class="md-primary md-raised" wz-next>Next</md-button>
         </div>
+          
         <form name="basicDetails">
         	<fieldset ng-disabled="false">
         		<div layout="row" layout-wrap layout-margin>
@@ -69,11 +73,7 @@
         		</div>
         	</fieldset>
         </form>
-        <div layout="row" layout-margin>
-        <div flex></div>	
-        <md-button class="md-raised" disabled>Back</md-button>
-        <md-button class="md-primary md-raised" wz-next>Next</md-button>
-        </div>
+      
     </md-content>    
         <!--<input type="submit" wz-next value="Continue" />-->
     </wz-step>
@@ -81,7 +81,11 @@
      <md-content>
         <div layout="row" layout-wrap layout-margin>
         <h2 class="md-title">Event Area Details</h2>
+        <div flex></div>	
+        <md-button class="md-raised" wz-previous>Back</md-button>
+        <md-button class="md-primary md-raised" wz-next>Next</md-button>
         </div>
+        
         
        <div layout="row" layout-margin>
         <div flex></div>
@@ -122,7 +126,7 @@
         <td md-cell><md-button class="md-icon-button" ng-click="vm.deleteEventArea($event,$index)"><md-icon class="material-icons">delete_forever</md-icon></md-button></td>
       </tr>
       <tr md-row  ng-if="vm.eventAreas.length === 0">
-      <td md-cell>No Event Areas Added</td>
+      <td md-cell colspan="8" style="text-align: center;">No Event Areas Added</td>
       </tr>
     </tbody>
   </table>
@@ -169,7 +173,7 @@
         <td md-cell><md-button class="md-icon-button" ng-click="vm.deleteRoom($event,$index)"><md-icon class="material-icons">delete_forever</md-icon></md-button></td>
       </tr>
       <tr md-row  ng-if="vm.rooms.length === 0">
-      <td md-cell>No Rooms Added</td>
+      <td md-cell colspan="7" style="text-align: center;">No Rooms Added</td>
       </tr>
     </tbody>
   </table>
@@ -178,7 +182,7 @@
 
 <!-- Rooms Details Table Ends -->
 
-<div layout="row" layout-margin layout-wrap layout-align="start center">
+<!--<div layout="row" layout-margin layout-wrap layout-align="start center">
 	<div flex-xs="100" flex-gt-xs="100" layout="row" layout-align="start center" layout-wrap>
 		<h2 class="md-title" flex-xs="100" flex-gt-xs="40">Select Services You Provide</h2>
 	<wan-select flex-xs="100" flex-gt-xs="60" placeholder="" source-data="::vm.lookup.eventAreaServices" selected-data="vm.selectedAreaServices" select-changed=""></wan-select>
@@ -187,13 +191,20 @@
 	<div flex-xs="100" flex-gt-xs="100">
 		<md-chips ng-model="vm.selectedAreaServices" readonly="::vm.readonly" md-removable="::vm.removable"></md-chips>
 	</div>	
+</div>-->
+
+<div layout="row" layout-margin layout-wrap>
+	<h2 class="md-title" flex-xs="100" flex-gt-xs="45">Select Services You Provide</h2>
+	<md-input-container flex-xs="100" flex-gt-xs="45">	
+  <md-select ng-model="vm.selectedAreaServices" multiple= "true" placeholder="You can choose multiple services">
+    <md-option ng-value="eventAreaService" ng-repeat="eventAreaService in ::vm.lookup.eventAreaServices">{{ eventAreaService }}</md-option>
+  </md-select>
+</md-input-container>
+<div flex-xs="100" flex-gt-xs="100">
+		<md-chips ng-model="vm.selectedAreaServices" readonly="::vm.readonly" md-removable="::vm.removable"></md-chips>
+	</div>	
 </div>
 
-<div layout="row" layout-margin>
-        <div flex></div>	
-        <md-button class="md-raised">Back</md-button>
-        <md-button class="md-primary md-raised" wz-next>Next</md-button>
-        </div>
 <!--<md-table-pagination md-limit="query.limit" md-limit-options="[5, 10, 15]" md-page="query.page" md-total="{{desserts.count}}" md-on-paginate="getDesserts" md-page-select></md-table-pagination>-->
      <md-content>
     </wz-step>
@@ -201,7 +212,11 @@
     <md-content>
     <div layout="row" layout-wrap layout-margin>
         <h2 class="md-title">Catering & Decor Details</h2>
+        <div flex></div>	
+        <md-button class="md-raised" wz-previous>Back</md-button>
+        <md-button class="md-primary md-raised" wz-next>Next</md-button>
         </div>
+        
     	<form name="vm.cateringDecorDetails">
         	<fieldset ng-disabled="false">
         		<div layout="row" layout-wrap layout-margin>
@@ -254,7 +269,19 @@
       				<span flex-gt-xs hide-xs></span>
       				<div flex-gt-xs="45" hide-xs></div>
       				
-      				<div layout="row" layout-margin layout-wrap layout-align="start center" flex-gt-xs="45" flex-xs="100">
+      				<div layout="row" layout-margin layout-wrap flex-gt-xs="45" flex-xs="100">
+	<h2 class="md-title" flex-xs="100" flex-gt-xs="45">Cuisines</h2>
+	<md-input-container flex-xs="100" flex-gt-xs="45">	
+  <md-select ng-model="vm.selectedCuisines" multiple= "true" placeholder="You can choose multiple cuisine">
+    <md-option ng-value="cuisine" ng-repeat="cuisine in ::vm.lookup.cuisines">{{ cuisine }}</md-option>
+  </md-select>
+</md-input-container>
+<div flex-xs="100" flex-gt-xs="100">
+		<md-chips ng-model="vm.selectedCuisines" readonly="::vm.readonly" md-removable="::vm.removable"></md-chips>
+	</div>	
+</div>
+      				
+      				<!--<div layout="row" layout-margin layout-wrap layout-align="start center" flex-gt-xs="45" flex-xs="100">
 						<div flex-xs="100" flex-gt-xs="100" layout="row" layout-align="start center" layout-wrap>
 							<h2 flex-gt-xs="70" flex-xs="100" class="md-title" flex>Cuisines</h2>
 							<wan-select flex-gt-xs="30" flex-xs="100" placeholder="" source-data="::vm.lookup.cuisines" selected-data="vm.selectedCuisines" select-changed=""></wan-select>
@@ -263,9 +290,22 @@
 						<div flex-xs="100" flex-gt-xs="100">
 							<md-chips ng-model="vm.selectedCuisines" readonly="::vm.readonly" md-removable="::vm.removable"></md-chips>
 						</div>	
-					</div>
+					</div>-->
 					<span flex-gt-xs hide-xs></span>
-					<div layout="row" layout-margin layout-wrap layout-align="start center" flex-gt-xs="45" flex-xs="100">
+					
+					<div layout="row" layout-margin layout-wrap flex-gt-xs="45" flex-xs="100">
+	<h2 class="md-title" flex-xs="100" flex-gt-xs="45">Basic Catering Services</h2>
+	<md-input-container flex-xs="100" flex-gt-xs="45">	
+  <md-select ng-model="vm.selectedBasicCateringServices" multiple= "true" placeholder="You can choose multiple catering services">
+    <md-option ng-value="cateringService" ng-repeat="cateringService in ::vm.lookup.basicCateringServices">{{ cateringService }}</md-option>
+  </md-select>
+</md-input-container>
+<div flex-xs="100" flex-gt-xs="100">
+		<md-chips ng-model="vm.selectedBasicCateringServices" readonly="::vm.readonly" md-removable="::vm.removable"></md-chips>
+	</div>	
+</div>
+					
+					<!--<div layout="row" layout-margin layout-wrap layout-align="start center" flex-gt-xs="45" flex-xs="100">
 						<div flex-xs="100" flex-gt-xs="100" layout="row" layout-align="start center" layout-wrap>
 							<h2 flex-gt-xs="70" flex-xs="100" class="md-title">Basic Catering Services</h2>
 							<wan-select flex-gt-xs="30" flex-xs="100" placeholder="" source-data="::vm.lookup.basicCateringServices" selected-data="vm.selectedBasicCateringServices" select-changed=""></wan-select>
@@ -274,7 +314,7 @@
 						<div flex-xs="100" flex-gt-xs="100">
 							<md-chips ng-model="vm.selectedBasicCateringServices" readonly="::vm.readonly" md-removable="::vm.removable"></md-chips>
 						</div>	
-					</div>
+					</div>-->
 					
         		</div>
         	
@@ -307,16 +347,19 @@
         </fieldset>
         </form>
         
-        <div layout="row" layout-margin>
-        <div flex></div>	
-        <md-button class="md-raised">Back</md-button>
-        <md-button class="md-primary md-raised" wz-next>Next</md-button>
-        </div>
+       
     </md-content>    
         <!--<input type="submit" wz-next value="Finish now" />-->
     </wz-step>
     <wz-step wz-title="Policies & Images">
     <md-content>
+    
+    <div layout="row" layout-margin>
+        <h2 class="md-title">Policies & Images</h2>
+        <div flex></div>	
+        <md-button class="md-raised" wz-previous>Back</md-button>
+        <md-button class="md-primary md-raised" wz-next>Next</md-button>
+        </div>	
     	<form name="vm.policyDetails">
         	<fieldset ng-disabled="false">
         		<div layout="row" layout-wrap layout-margin>
@@ -402,8 +445,54 @@
       				
       		
       		</fieldset>
-      		</form>		
+      		</form>	
+      		
     </md-content>
    </wz-step>
+   
+   <wz-step wz-title="Sign Off">
+    <md-content>
+    <div layout="row" layout-wrap layout-margin>
+        <h2 class="md-title">Sign Off</h2>
+                <div flex></div>	
+        <md-button class="md-raised" wz-previous>Back</md-button>
+        <md-button class="md-primary md-raised" wz-next>Finish</md-button>
+        </div>
+          
+    	<form name="vm.signOffDetails">
+        	<fieldset ng-disabled="false">
+        		<div layout="row" layout-wrap layout-margin>
+        			<md-input-container class="md-block" flex-gt-xs="100" flex-xs="100">
+        				<md-checkbox ng-model="vm.signOffDetails.agreementCheckbox" aria-label="I Agree">
+							I agree that all the information provided by me is correct, accurate and true to my knowledge.
+						</md-checkbox>
+      				</md-input-container>
+      				
+      				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
+        				<label>Information Provider Name</label>
+        				<input ng-model="vm.signOffDetails.InformationProviderName" type="text">
+      				</md-input-container>
+      				<span flex-gt-xs hide-xs></span>
+      				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
+        				<label>Information Provider Designation</label>
+        				<input ng-model="vm.signOffDetails.InformationProviderDesignation" type="text">
+      				</md-input-container>
+      				
+      				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
+        				<label>Information Provided Date</label>
+        				<md-datepicker ng-model="vm.signOffDetails.InformationProvidedDate" md-placeholder="Enter Date" disabled></md-datepicker>
+      				</md-input-container>
+      				<span flex-gt-xs hide-xs></span>
+      				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
+        				<label>Information Provider Contact No.</label>
+        				<input ng-model="vm.signOffDetails.InformationProviderContactNo" type="text">
+      				</md-input-container>
+        		</div>
+        	</fieldset>
+        </form>
+        
+      
+    </md-content>
+    </wz-step>    		
 </wizard>
 </md-content>
