--- a/app/views/login/signup.html
+++ b/app/views/login/signup.html
@@ -8,81 +8,76 @@
       <div class="modal-body">
       	
       	<md-content>
+
+<global-messagebar message-type="vm.messageType" message-bar-message="vm.messageBarMessage"></global-messagebar>
+        
     <md-tabs md-dynamic-height md-border-bottom md-stretch-tabs="always">
       <md-tab label="User">
         <md-content class="md-padding">
-        	<div class="social-buttons">
-									<a href="#" class="btn btn-fb"><i class="fa fa-facebook"></i> Facebook</a>
-									<a href="#" class="btn btn-gg"><i class="fa fa-google"></i> Google</a>
+        	<!--<div class="social-buttons">
+									<a href="javascript:void(0)" class="btn btn-fb"><i class="fa fa-facebook"></i> Facebook</a>
+									<a href="javascript:void(0)" class="btn btn-gg"><i class="fa fa-google"></i> Google</a>
 								</div>
-								<!--
-								<hr>
-																<div class="text-center">OR</div>-->
 								
-      		<hr>
+								<hr>
+																<div class="text-center">OR</div>
+								
+      		<hr>-->
         <form name="form.signupFormUser" class="col-sm-12" novalidate>
         
         <div class="form-group" style="margin-top:10px;"><label class="required">Name</label><input class="form-control required" placeholder="Your Name" type="text" ng-model="vm.signupUser.name" name="name" required>
-          <span style="color:brown;" ng-show="(form.signupFormUser.name.$touched || vm.submitted) && form.signupFormUser.name.$invalid">Name is mandatory.</span>
+          <span class="validation-err-msg" ng-show="(form.signupFormUser.name.$touched || form.signupFormUser.$submitted) && form.signupFormUser.name.$invalid">Name is mandatory.</span>
       	</div>	
         	
         <div class="form-group" style="margin-top:10px;"><label class="required">Email</label><input class="form-control required" placeholder="Your email address" type="email" ng-model="vm.signupUser.email" name="email" required ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/">
-          <span style="color:brown;" ng-show="(form.signupFormUser.email.$touched || vm.submitted) && form.signupFormUser.email.$invalid">Email is mandatory.</span>
+          <span class="validation-err-msg" ng-show="(form.signupFormUser.email.$touched || form.signupFormUser.$submitted) && form.signupFormUser.email.$invalid && form.signupFormUser.email.$error.required">Email is mandatory.</span>
+          <span class="validation-err-msg" ng-show="(form.signupFormUser.email.$touched || form.signupFormUser.$submitted) && form.signupFormUser.email.$invalid && form.signupFormUser.email.$error.pattern">Kindly give a valid Email Address</span>
       	</div>
 
           <div class="form-group"><label class="required">Password</label><input class="form-control required" placeholder="Your password" type="password" ng-model="vm.signupUser.password" name="password" required></input>
-          	<span style="color:brown;" ng-show="(form.signupFormUser.password.$touched || vm.submitted) && form.signupFormUser.password.$invalid">Password is mandatory.</span>
+          	<span class="validation-err-msg" ng-show="(form.signupFormUser.password.$touched || form.signupFormUser.$submitted) && form.signupFormUser.password.$invalid">Password is mandatory.</span>
           </div>
           
-           <div class="form-group"><label class="required">Confirm Password</label><input class="form-control required" placeholder="Retype password" type="password" ng-model="vm.signupUser.confirmPassword" name="confirmPassword" required></input>
-          	<span style="color:brown;" ng-show="(form.signupFormUser.confirmPassword.$touched || vm.submitted) && form.signupFormUser.confirmPassword.$invalid">Confirm your Password</span>
+           <div class="form-group"><label class="required">Confirm Password</label><input class="form-control required" placeholder="Retype password" type="password" ng-model="vm.signupUser.confirmPassword" name="confirmPassword" confirm-password="vm.signupUser.password" required></input>
+          	<span class="validation-err-msg" ng-show="(form.signupFormUser.confirmPassword.$touched || form.signupFormUser.$submitted) && form.signupFormUser.confirmPassword.$invalid">Confirm your Password</span>
+          	<span class="validation-err-msg" ng-show="(form.signupFormUser.confirmPassword.$touched || form.signupFormUser.$submitted) && form.signupFormUser.confirmPassword.$error.confirmpassword">Password and Confirm Password does not match</span>
           </div>
 		
 		<div>	
-          <a href="#" class="btn btn-login">CREATE MY ACCOUNT</a>
+          <a href="javascript:void(0)" class="btn btn-login" ng-click="vm.createAccount('user');">CREATE MY ACCOUNT</a>
 </div>
 		<div class="text-center mTop10">
       	Already have an account ? <a href="javascript:void(0)" class="log-in-link" data-ng-click="vm.closePopup();vm.showSignInPopup();">LOG IN</a>
       </div>
-         <!--
-          <div class="form-group"><label class="required">Test your math skill</label>
-                       <div id="captcha">
-                                                      </div>
-                     <span style="color:brown;" ng-show="vm.submitted && !captchaValid">Captcha is Invalid.</span>
-                   </div>-->
-         
-          
+                   
         </form>
         
           </md-content>
       </md-tab>
       <md-tab label="Vendor">
         <md-content class="md-padding">
-        	<!--<div class="social-buttons">
-									<a href="#" class="btn btn-fb"><i class="fa fa-facebook"></i> Facebook</a>
-									<a href="#" class="btn btn-gg"><i class="fa fa-google"></i> Google</a>
-								</div>
-								
-      		<hr>-->
+        	
         <form name="form.signupFormVendor" class="col-sm-12" novalidate>
         
         <div class="form-group" style="margin-top:10px;"><label class="required">Name</label><input class="form-control required" placeholder="Your Name" type="text" ng-model="vm.signupVendor.name" name="name" required>
-          <span style="color:brown;" ng-show="(form.signupFormVendor.name.$touched || vm.submitted) && form.signupFormVendor.name.$invalid">Name is mandatory.</span>
+          <span class="validation-err-msg" ng-show="(form.signupFormVendor.name.$touched || form.signupFormVendor.$submitted) && form.signupFormVendor.name.$invalid">Name is mandatory.</span>
       	</div>	
         	
         <div class="form-group" style="margin-top:10px;"><label class="required">Email</label><input class="form-control required" placeholder="Your email address" type="email" ng-model="vm.signupVendor.email" name="email" required ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/">
-          <span style="color:brown;" ng-show="(form.signupFormVendor.email.$touched || vm.submitted) && form.signupFormVendor.email.$invalid">Email is mandatory.</span>
+          <span class="validation-err-msg" ng-show="(form.signupFormVendor.email.$touched || form.signupFormVendor.$submitted) && form.signupFormVendor.email.$invalid && form.signupFormVendor.email.$error.required">Email is mandatory.</span>
+          <span class="validation-err-msg" ng-show="(form.signupFormVendor.email.$touched || form.signupFormVendor.$submitted) && form.signupFormVendor.email.$invalid && form.signupFormVendor.email.$error.pattern">Kindly give a valid Email Address</span>
       	</div>
 
           <div class="form-group"><label class="required">Password</label><input class="form-control required" placeholder="Your password" type="password" ng-model="vm.signupVendor.password" name="password" required></input>
-          	<span style="color:brown;" ng-show="(form.signupFormVendor.password.$touched || vm.submitted) && form.signupFormVendor.password.$invalid">Password is mandatory.</span>
+          	<span class="validation-err-msg" ng-show="(form.signupFormVendor.password.$touched || form.signupFormVendor.$submitted) && form.signupFormVendor.password.$invalid">Password is mandatory.</span>
           </div>
           
-           <div class="form-group"><label class="required">Confirm Password</label><input class="form-control required" placeholder="Retype password" type="password" ng-model="vm.signupVendor.confirmPassword" name="confirmPassword" required></input>
-          	<span style="color:brown;" ng-show="(form.signupFormVendor.confirmPassword.$touched || vm.submitted) && form.signupFormVendor.confirmPassword.$invalid">Confirm your Password</span>
+           <div class="form-group"><label class="required">Confirm Password</label><input class="form-control required" placeholder="Retype password" type="password" ng-model="vm.signupVendor.confirmPassword" name="confirmPassword" confirm-password="vm.signupVendor.password" required></input>
+          	<span class="validation-err-msg" ng-show="(form.signupFormVendor.confirmPassword.$touched || form.signupFormVendor.$submitted) && form.signupFormVendor.confirmPassword.$e">Confirm your Password</span>
+          	<span class="validation-err-msg" ng-show="(form.signupFormVendor.confirmPassword.$touched || form.signupFormVendor.$submitted) && form.signupFormVendor.confirmPassword.$error.confirmpassword">Password and Confirm Password fields does not match</span>
           </div>
           
-          <div class="form-group"><label>Brand Name</label><input class="form-control required" placeholder="Your Brand Name" type="text" ng-model="vm.signupVendor.brandName" name="brandName"></input>
+          <div class="form-group"><label>Brand Name</label><input class="form-control required" placeholder="Your Brand Name" type="text" ng-model="vm.signupVendor.entityName" name="entityName"></input>
           </div>
           
           <div class="form-group"><label class="required">Select Vendor Type</label><br/>
@@ -94,23 +89,16 @@
           		<option value="entertainment">ENTERTAINMENT</option>
           		<option value="other">OTHERS</option>
           	</select>
-          	<span style="color:brown;" ng-show="(form.signupFormVendor.vendorType.$touched || vm.submitted) && form.signupFormVendor.vendorType.$invalid">Please select a Vendor Type</span>
+          	<span class="validation-err-msg" ng-show="(form.signupFormVendor.vendorType.$touched || form.signupFormVendor.$submitted) && form.signupFormVendor.vendorType.$invalid">Please select a Vendor Type</span>
           </div>
 		
 		<div>	
-          <a href="#" class="btn btn-login">CREATE MY ACCOUNT</a>
+          <a href="javascript:void(0)" class="btn btn-login" ng-click="vm.createAccount('vendor');">CREATE MY ACCOUNT</a>
 </div>
 		<div class="text-center mTop10">
       	Already have an account ? <a href="javascript:void(0)" class="log-in-link" data-ng-click="vm.closePopup();vm.showSignInPopup();">LOG IN</a>
       </div>
-         <!--
-          <div class="form-group"><label class="required">Test your math skill</label>
-                       <div id="captcha">
-                                                      </div>
-                     <span style="color:brown;" ng-show="vm.submitted && !captchaValid">Captcha is Invalid.</span>
-                   </div>-->
-         
-          
+                 
         </form>
         
           </md-content>
