--- a/app/views/header/header.html
+++ b/app/views/header/header.html
@@ -39,7 +39,7 @@
               </md-button>
             </md-menu-item>
             <md-menu-item>
-              <md-button ng-click="vm.showResetPwdPopup();">
+              <md-button ng-click="showResetPwdPopup();">
                   <div layout="row" flex>                
                     <md-icon md-menu-align-target class="material-icons">settings_backup_restore</md-icon>
                     <p flex>Reset Password</p>
@@ -47,7 +47,7 @@
               </md-button>
             </md-menu-item>
             <md-menu-item>
-              <md-button ng-click="vm.logout();">
+              <md-button ng-click="logout();">
                   <div layout="row" flex>                
                     <md-icon md-menu-align-target class="material-icons">power_settings_new</md-icon>
                     <p flex>Logout</p>
