--- a/app/views/header/header.html
+++ b/app/views/header/header.html
@@ -47,7 +47,7 @@
               </md-button>
             </md-menu-item>
             <md-menu-item>
-              <md-button ng-click="logout();">
+              <md-button ng-click="vm.logout();">
                   <div layout="row" flex>                
                     <md-icon md-menu-align-target class="material-icons">power_settings_new</md-icon>
                     <p flex>Logout</p>
