checking in reset password functionality

--- a/app/views/login/forgotpwd.html
+++ b/app/views/login/forgotpwd.html
@@ -6,7 +6,11 @@
         <h3 id="myModalLabel">FORGOT YOUR DETAILS</h3>
       </div>
       <div class="modal-body">
+      	<!-- Global Message Bar -->
       	
+      	<global-messagebar message-type="vm.messageType" message-bar-message="vm.messageBarMessage"></global-messagebar>
+      	
+      	<!-- Global Message Bar Ends -->
       	
         <form name="form.fgtpwdForm" class="col-sm-12" novalidate>
         	
