--- a/app/lp_wizard/views/venue_wizard/venue_wizard.html
+++ b/app/lp_wizard/views/venue_wizard/venue_wizard.html
@@ -1,6 +1,6 @@
 <md-content style="padding-top: 80px;" ng-controller="venueWizardController as vm">
-<wizard on-finish="finishedWizard()" indicators-position="top"> 
-    <wz-step wz-title="Basic Details">
+<wizard on-finish="" name="venueWizard" edit-mode="false" ng-model="vm.venueWizardCurrentStep" indicators-position="top"> 
+    <wz-step wz-title="Basic Details" canexit="vm.exitBasicDetailsStep">
     <md-content>
 		<div layout="row" layout-wrap layout-margin>
         <h2 class="md-title">Basic Details</h2>
@@ -9,66 +9,107 @@
         <md-button class="md-primary md-raised" wz-next>Next</md-button>
         </div>
           
-        <form name="basicDetails">
+        <form name="vm.basicDetailsForm">
         	<fieldset ng-disabled="false">
         		<div layout="row" layout-wrap layout-margin>
         			<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
-        				<label>Name</label>
-        				<input ng-model="basicDetails.name" type="text">
-      				</md-input-container>
-      				<span flex-gt-xs hide-xs></span>
-      				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
-        				<label>Type</label>
-        				 <md-select ng-model="basicDetails.type">
-            			<md-option ng-repeat="type in ::vm.lookup.venueType" value="{{type}}">{{type}}</md-option>
-      				</md-select>
+        				<label>Venue Name</label>
+        				<input name="venueName" ng-model="vm.basicDetails.venueName" type="text" required>
+        				<div ng-messages="vm.basicDetailsForm.venueName.$error" role="alert" multiple>
+              				<div ng-message="required" class="my-message">Venue Name is Required.</div>
+              			 </div>
       				</md-input-container>
       				
-      				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
-        				<label>Address</label>
-        				<textarea ng-model="basicDetails.address" rows="3" type="text"></textarea>
-      				</md-input-container>
       				<span flex-gt-xs hide-xs></span>
+      				
+      				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
+        				<label>Venue Type</label>
+        				 <md-select name="venueType" ng-model="vm.basicDetails.venueType" required>
+            			<md-option ng-repeat="type in ::vm.lookup.venueType" value="{{type}}">{{type}}</md-option>
+      				</md-select>
+      				<div ng-messages="vm.basicDetailsForm.venueType.$error" role="alert" multiple>
+              				<div ng-message="required" class="my-message">Please choose a venue type</div>
+              			 </div>
+      				</md-input-container>
+      				
+      				
+      				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
+        				<label>Venue Address</label>
+        				<textarea name="venueAddress" ng-model="vm.basicDetails.venueAddress" rows="3" type="text" required></textarea>
+        				<div ng-messages="vm.basicDetailsForm.venueAddress.$error" role="alert" multiple>
+              				<div ng-message="required" class="my-message">Venue Address is Required.</div>
+              			 </div>
+      				</md-input-container>
+      				
+      				<span flex-gt-xs hide-xs></span>
+      				
       				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
         				<label>Short Description</label>
-        				<textarea ng-model="basicDetails.description" rows="3" type="text" md-maxlength="500"></textarea>
+        				<textarea name="venueDescription" ng-model="vm.basicDetails.venueDescription" rows="3" type="text" md-maxlength="500"></textarea>
       				</md-input-container>
+      				
       				
       				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
         				<label>Primary Contact No</label>
-        				<input ng-model="basicDetails.primaryContactNo" type="number">
+        				<input name="primaryContactNo" ng-model="vm.basicDetails.primaryContactNo" type="text" ng-pattern="/^\d{0,12}(\.\d{1,12})?$/" required>
+        				<div ng-messages="vm.basicDetailsForm.primaryContactNo.$error" role="alert" multiple>
+              				<div ng-message="required" class="my-message">Phone Number is Required.</div>
+              				<div ng-message="pattern" class="my-message">Invalid Phone No. Please enter a valid one</div>
+              			 </div>
       				</md-input-container>
+      				
       				<span flex-gt-xs hide-xs></span>
+      				
       				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
         				<label>Secondary Contact No</label>
-        				<input ng-model="basicDetails.secondaryContactNo" type="number">
+        				<input name="secondaryContactNo" ng-model="vm.basicDetails.secondaryContactNo" type="text" ng-pattern="/^\d{0,12}(\.\d{1,12})?$/">
+      					<div ng-messages="vm.basicDetailsForm.secondaryContactNo.$error" role="alert" multiple>
+              				<div ng-message="pattern" class="my-message">Invalid Phone No. Please enter a valid one</div>
+              			 </div>
       				</md-input-container>
+      				
       				
       				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
         				<label>Primary Email ID</label>
-        				<input ng-model="basicDetails.primaryEmailId" type="email">
+        				<input name="primaryEmailId" ng-model="vm.basicDetails.primaryEmailId" type="text" ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/" required>
+      					<div ng-messages="vm.basicDetailsForm.primaryEmailId.$error" role="alert" multiple>
+              				<div ng-message="required" class="my-message">Email ID is Required.</div>
+              				<div ng-message="pattern" class="my-message">Invalid Email ID. Please enter a valid one</div>
+              			 </div>
       				</md-input-container>
+      				
       				<span flex-gt-xs hide-xs></span>
+      				
       				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
         				<label>Secondary Email ID</label>
-        				<input ng-model="basicDetails.secondaryEmailId" type="email">
+        				<input name="secondaryEmailId" ng-model="vm.basicDetails.secondaryEmailId" type="text" ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/">
+        				<div ng-messages="vm.basicDetailsForm.secondaryEmailId.$error" role="alert" multiple>
+              				<div ng-message="pattern" class="my-message">Invalid Email ID. Please enter a valid one</div>
+              			 </div>
       				</md-input-container>
+      				
       				
       				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
         				<label>Website</label>
-        				<input ng-model="basicDetails.website" type="text">
+        				<input ng-model="vm.basicDetails.website" type="text">
       				</md-input-container>
+      				
       				<span flex-gt-xs hide-xs></span>
+      				
       				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
         				<label>FB Page Link</label>
-        				<input ng-model="basicDetails.fbPageLink" type="text">
+        				<input ng-model="vm.basicDetails.fbPageLink" type="text">
       				</md-input-container>
+      				
       				
       				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
         				<label>City</label>
-        				 <md-select ng-model="basicDetails.city">
+        				 <md-select ng-model="vm.basicDetails.city" required name="city">
             			<md-option ng-repeat="city in ::vm.lookup.venueCity" value="{{city}}">{{city}}</md-option>
       				</md-select>
+      				<div ng-messages="vm.basicDetailsForm.city.$error" role="alert" multiple>
+              				<div ng-message="required" class="my-message">Please choose a city for your venue</div>
+              			 </div>
       				</md-input-container>
         		</div>
         	</fieldset>
@@ -77,7 +118,7 @@
     </md-content>    
         <!--<input type="submit" wz-next value="Continue" />-->
     </wz-step>
-    <wz-step wz-title="Event Area Details">
+    <wz-step wz-title="Event Area Details" canenter="vm.exitBasicDetailsStep" canexit="">
      <md-content>
         <div layout="row" layout-wrap layout-margin>
         <h2 class="md-title">Event Area Details</h2>
