--- a/app/views/login/resetpwd.html
+++ b/app/views/login/resetpwd.html
@@ -12,11 +12,11 @@
         	
         	
         <div class="form-group" style="margin-top:10px;"><label class="required">Old Password</label><input class="form-control required" placeholder="Your Old Password" type="password" ng-model="vm.resetpwdForm.oldPassword" name="oldPassword" required>
-          <span class="validation-err-msg" ng-show="(form.resetpwdForm.oldPassword.$touched || vm.submitted) && form.resetpwdForm.oldPassword.$invalid">Old Password is Required</span>
+          <span class="validation-err-msg" ng-show="(form.resetpwdForm.oldPassword.$touched || form.resetpwdForm.$submitted) && form.resetpwdForm.oldPassword.$invalid">Old Password is Required</span>
       	</div>
       	
       	<div class="form-group" style="margin-top:10px;"><label class="required">New Password</label><input class="form-control required" placeholder="Your New Password" type="password" ng-model="vm.resetpwdForm.newPassword" name="newPassword" required>
-          <span class="validation-err-msg" ng-show="(form.resetpwdForm.newPassword.$touched || vm.submitted) && form.resetpwdForm.newPassword.$invalid">New Password is Required</span>
+          <span class="validation-err-msg" ng-show="(form.resetpwdForm.newPassword.$touched || form.resetpwdForm.$submitted) && form.resetpwdForm.newPassword.$invalid">New Password is Required</span>
       	</div>
       	
       	<div class="form-group" style="margin-top:10px;"><label class="required">Confirm New Password</label><input class="form-control required" placeholder="Confirm New Password" type="password" ng-model="vm.resetpwdForm.confirmNewPassword" confirm-password="vm.resetpwdForm.newPassword" name="confirmNewPassword" required>
